5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4143/executions/1758_1576.log
== TEST (2019-05-23 11:10:02) 
-- CODE:
from numpy import*
j1 = arry(eval(input("VET1 eusapia:")))
j2= arry(eval(input("VET2 BARSANULFO:"))) 
i = 0
soma1 = 0
soma2 = 0
while (i< size(j1)):
	if(j1[i] ==11 and j2[i]==33) or (j1[i]==22 and j2[i]==11) or (j1[i]==33 and j2[i]==22)
		soma = soma +1
	elif (j1[i]==33 and j2[i]==11) or (j1[i]==11 and j2[i]==22) or (j1[i]==22 and j2[i]==33)
		soma = soma +1
	else:
		mgs = "empate"
	i = i+1
print(size(j1))
if soma1>soma2:
	print("EUSAPIA")
elif soma2>soma1:
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
File "XXXX", line 8
    if(j1[i] ==11 and j2[i]==33) or (j1[i]==22 and j2[i]==11) or (j1[i]==33 and j2[i]==22)
                                                                                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:11:01) 
-- CODE:
from numpy import*
j1 = array(eval(input("VET1 eusapia:")))
j2= array(eval(input("VET2 BARSANULFO:"))) 
i = 0
soma1 = 0
soma2 = 0
while (i< size(j1)):
	if (j1[i] ==11 and j2[i]==33) or (j1[i]==22 and j2[i]==11) or (j1[i]==33 and j2[i]==22)
		soma = soma +1
	elif (j1[i]==33 and j2[i]==11) or (j1[i]==11 and j2[i]==22) or (j1[i]==22 and j2[i]==33)
		soma = soma +1
	else:
		mgs = "empate"
	i = i+1
print(size(j1))
if soma1>soma2:
	print("EUSAPIA")
elif soma2>soma1:
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
File "XXXX", line 8
    if (j1[i] ==11 and j2[i]==33) or (j1[i]==22 and j2[i]==11) or (j1[i]==33 and j2[i]==22)
                                                                                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:11:20) 
-- CODE:
from numpy import*
j1 = array(eval(input("VET1 eusapia:")))
j2= array(eval(input("VET2 BARSANULFO:"))) 
i = 0
soma1 = 0
soma2 = 0
while (i< size(j1)):
	if (j1[i]== 11 and j2[i]==33) or (j1[i]==22 and j2[i]==11) or (j1[i]==33 and j2[i]==22)
		soma = soma +1
	elif (j1[i]==33 and j2[i]==11) or (j1[i]==11 and j2[i]==22) or (j1[i]==22 and j2[i]==33)
		soma = soma +1
	else:
		mgs = "empate"
	i = i+1
print(size(j1))
if soma1>soma2:
	print("EUSAPIA")
elif soma2>soma1:
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
File "XXXX", line 8
    if (j1[i]== 11 and j2[i]==33) or (j1[i]==22 and j2[i]==11) or (j1[i]==33 and j2[i]==22)
                                                                                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:11:35) 
-- CODE:
from numpy import*
j1 = array(eval(input("VET1 eusapia:")))
j2= array(eval(input("VET2 BARSANULFO:"))) 
i = 0
soma1 = 0
soma2 = 0
while (i< size(j1)):
	if (j1[i]== 11 and j2[i]==33) or (j1[i]==22 and j2[i]==11) or (j1[i]==33 and j2[i]==22):
		soma = soma +1
	elif (j1[i]==33 and j2[i]==11) or (j1[i]==11 and j2[i]==22) or (j1[i]==22 and j2[i]==33):
		soma = soma +1
	else:
		mgs = "empate"
	i = i+1
print(size(j1))
if soma1>soma2:
	print("EUSAPIA")
elif soma2>soma1:
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 11:13:02) 
-- CODE:
from numpy import*
j1 = array(eval(input("VET1 eusapia:")))
j2= array(eval(input("VET2 BARSANULFO:"))) 
i = 0
soma1 = 0
soma2 = 0
while (i< size(j1)):
	if (j1[i]== 11 and j2[i]==33) or (j1[i]==22 and j2[i]==11) or (j1[i]==33 and j2[i]==22):
		soma = soma +1
	elif (j1[i]==33 and j2[i]==11) or (j1[i]==11 and j2[i]==22) or (j1[i]==22 and j2[i]==33):
		soma = soma +1
	else:
		mgs = "empate"
	i = i+1
print(size(j1))
if soma1>soma2:
	print("EUSAPIA")
elif soma2>soma1:
	print("BARSANULFO")
else:
	print("EMPATE")
-- EXECUTION TIME:
0.39028
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1576/main.py", line 9, in <module>
    soma = soma +1
NameError: name 'soma' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:13:18) 
-- CODE:
from numpy import*
j1 = array(eval(input("VET1 eusapia:")))
j2= array(eval(input("VET2 BARSANULFO:"))) 
i = 0
soma1 = 0
soma2 = 0
while (i< size(j1)):
	if (j1[i]== 11 and j2[i]==33) or (j1[i]==22 and j2[i]==11) or (j1[i]==33 and j2[i]==22):
		soma = soma +1
	elif (j1[i]==33 and j2[i]==11) or (j1[i]==11 and j2[i]==22) or (j1[i]==22 and j2[i]==33):
		soma = soma +1
	else:
		mgs = "empate"
	i = i+1
print(size(j1))
if soma1>soma2:
	print("EUSAPIA")
elif soma2>soma1:
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 11:13:41) 
-- CODE:
from numpy import*
j1 = array(eval(input("VET1 eusapia:")))
j2= array(eval(input("VET2 BARSANULFO:"))) 
i = 0
soma1 = 0
soma2 = 0
while (i< size(j1)):
	if (j1[i]== 11 and j2[i]==33) or (j1[i]==22 and j2[i]==11) or (j1[i]==33 and j2[i]==22):
		soma = soma +1
	elif (j1[i]==33 and j2[i]==11) or (j1[i]==11 and j2[i]==22) or (j1[i]==22 and j2[i]==33):
		soma = soma +1
	else:
		mgs = "empate"
	i = i+1
print(size(j1))
if soma1>soma2:
	print("EUSAPIA")
elif soma2>soma1:
	print("BARSANULFO")
else:
	print("EMPATE")
-- EXECUTION TIME:
0.3868
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1576/main.py", line 9, in <module>
    soma = soma +1
NameError: name 'soma' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:14:07) 
-- CODE:
from numpy import*
j1 = array(eval(input("VET1 eusapia:")))
j2= array(eval(input("VET2 BARSANULFO:"))) 
i = 0
soma1 = 0
soma2 = 0
while (i< size(j1)):
	if (j1[i]== 11 and j2[i]==33) or (j1[i]==22 and j2[i]==11) or (j1[i]==33 and j2[i]==22):
		soma = soma +1
	elif (j1[i]==33 and j2[i]==11) or (j1[i]==11 and j2[i]==22) or (j1[i]==22 and j2[i]==33):
		soma = soma +1
	else:
		mgs = "empate"
	i = i+1
print(size(j1))
if soma1>soma2:
	print("EUSAPIA")
elif soma2>soma1:
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:14:14) 
-- CODE:
from numpy import*
j1 = array(eval(input("VET1 eusapia:")))
j2= array(eval(input("VET2 BARSANULFO:"))) 
i = 0
soma1 = 0
soma2 = 0
while (i< size(j1)):
	if (j1[i]== 11 and j2[i]==33) or (j1[i]==22 and j2[i]==11) or (j1[i]==33 and j2[i]==22):
		soma = soma +1
	elif (j1[i]==33 and j2[i]==11) or (j1[i]==11 and j2[i]==22) or (j1[i]==22 and j2[i]==33):
		soma = soma +1
	else:
		mgs = "empate"
		i = i+1
print(size(j1))
if soma1>soma2:
	print("EUSAPIA")
elif soma2>soma1:
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 11:14:20) 
-- CODE:
from numpy import*
j1 = array(eval(input("VET1 eusapia:")))
j2= array(eval(input("VET2 BARSANULFO:"))) 
i = 0
soma1 = 0
soma2 = 0
while (i< size(j1)):
	if (j1[i]== 11 and j2[i]==33) or (j1[i]==22 and j2[i]==11) or (j1[i]==33 and j2[i]==22):
		soma = soma +1
	elif (j1[i]==33 and j2[i]==11) or (j1[i]==11 and j2[i]==22) or (j1[i]==22 and j2[i]==33):
		soma = soma +1
	else:
		mgs = "empate"
		i = i+1
print(size(j1))
if soma1>soma2:
	print("EUSAPIA")
elif soma2>soma1:
	print("BARSANULFO")
else:
	print("EMPATE")
-- EXECUTION TIME:
0.439703
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1576/main.py", line 9, in <module>
    soma = soma +1
NameError: name 'soma' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:18:08) 
-- CODE:
from numpy import*
j1 = array(eval(input("VET1 eusapia:")))
j2= array(eval(input("VET2 BARSANULFO:"))) 
i = 0
soma1 = 0
soma2 = 0
while (i< size(j1)):
	if (j1[i]== 11 and j2[i]==33) or (j1[i]==22 and j2[i]==11) or (j1[i]==33 and j2[i]==22):
		soma1 = soma1 +1
	elif (j1[i]==33 and j2[i]==11) or (j1[i]==11 and j2[i]==22) or (j1[i]==22 and j2[i]==33):
		soma2 = soma2 +1
	else:
		mgs = "EMPATE"
		i = i+1
print(size(j1))
if soma1>soma2:
	print("EUSAPIA")
elif soma2>soma1:
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:19:15) 
-- CODE:
from numpy import*
j1 = array(eval(input("VET1 eusapia:")))
j2= array(eval(input("VET2 BARSANULFO:"))) 
i = 0
soma1 = 0
soma2 = 0
while (i< size(j1)):
	if (j1[i]== 11 and j2[i]==33) or (j1[i]==22 and j2[i]==11) or (j1[i]==33 and j2[i]==22):
		soma1 = soma1 +1
	elif (j1[i]==33 and j2[i]==11) or (j1[i]==11 and j2[i]==22) or (j1[i]==22 and j2[i]==33):
		soma2 = soma2 +1
	else:
		mgs = "EMPATE"
		i = i+1
print(size(j1))
if (soma1>soma2):
	print("EUSAPIA")
elif (soma2>soma1):
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:21:01) 
-- CODE:
from numpy import*
j1 = array(eval(input("VET1 eusapia:")))
j2= array(eval(input("VET2 BARSANULFO:"))) 
i = 0
soma1 = 0
soma2 = 0
while (i< size(j1)):
	if (j1[i]== 11 and j2[i]==33) or (j1[i]==22 and j2[i]==11) or (j1[i]==33 and j2[i]==22):
		soma1 = soma1 +1
	elif (j1[i]==33 and j2[i]==11) or (j1[i]==11 and j2[i]==22) or (j1[i]==22 and j2[i]==33):
		soma2 = soma2 +1
	else:
		mgs = "EMPATE"
		i = i+1
print(size(j1))
if (soma1>soma2):
	print("EUSAPIA")
elif (soma2>soma1):
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:25:24) 
-- CODE:
from numpy import*
j1 = array(eval(input("VET1 EUSAAPIA: ")))
j2= array(eval(input("VET2 BARSANULFO: "))) 
i = 0
soma1 = 0
soma2 = 0
while (i< size(j1)):
	if (j1[i]== 11 and j2[i]==33) or (j1[i]==22 and j2[i]==11) or (j1[i]==33 and j2[i]==22):
		soma1 = soma1 +1
	elif (j1[i]==33 and j2[i]==11) or (j1[i]==11 and j2[i]==22) or (j1[i]==22 and j2[i]==33):
		soma2 = soma2 +1
	i = i+1
print(size(j1))
if (soma1>soma2):
	print("EUSAPIA")
elif (soma2>soma1):
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 11:26:34) 
-- CODE:
from numpy import*
j1 = array(eval(input("VET1 EUSAAPIA: ")))
j2= array(eval(input("VET2 BARSANULFO: "))) 
i = 0
soma1 = 0
soma2 = 0
while (i< size(j1)):
	if (j1[i]== 11 and j2[i]==33) or (j1[i]==22 and j2[i]==11) or (j1[i]==33 and j2[i]==22):
		soma1 = soma1 +1
	elif (j1[i]==33 and j2[i]==11) or (j1[i]==11 and j2[i]==22) or (j1[i]==22 and j2[i]==33):
		soma2 = soma2 +1
	i = i+1
print(size(j1))
if (soma1>soma2):
	print("EUSAPIA")
elif (soma2>soma1):
	print("BARSANULFO")
else:
	print("EMPATE")
-- EXECUTION TIME:
2.26789
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 11:34:05) 
-- CODE:
from numpy import*
j1 = array(eval(input("VET1 eusapia:")))
j2= array(eval(input("VET2 BARSANULFO:"))) 
i = 0
soma1 = 0
soma2 = 0
while (i< size(j1)):
	if (j1[i]== 11 and j2[i]==33) or (j1[i]==22 and j2[i]==11) or (j1[i]==33 and j2[i]==22):
		soma1 = soma1 +1
	elif (j1[i]==33 and j2[i]==11) or (j1[i]==11 and j2[i]==22) or (j1[i]==22 and j2[i]==33):
		soma2 = soma2 +1
	else:
		mgs = "EMPATE"
		i = i+1
print(size(j1))
if soma1>soma2:
	print("EUSAPIA")
elif soma2>soma1:
	print("BARSANULFO")
else:
	print("EMPATE")
-- EXECUTION TIME:
958.808
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 11:35:04) 
-- CODE:
from numpy import*
j1 = array(eval(input("VET1 eusapia:")))
j2= array(eval(input("VET2 BARSANULFO:"))) 
i = 0
soma1 = 0
soma2 = 0
while (i< size(j1)):
	if (j1[i]== 11 and j2[i]==33) or (j1[i]==22 and j2[i]==11) or (j1[i]==33 and j2[i]==22):
		soma1 = soma1 +1
	elif (j1[i]==33 and j2[i]==11) or (j1[i]==11 and j2[i]==22) or (j1[i]==22 and j2[i]==33):
		soma2 = soma2 +1
	else:
		mgs = "EMPATE"
		i = i+1
print(size(j1))
if soma1>soma2:
	print("EUSAPIA")
elif soma2>soma1:
	print("BARSANULFO")
else:
	print("EMPATE")
-- EXECUTION TIME:
988.703
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 11:37:02) 
-- CODE:
from numpy import*
j1 = array(eval(input("VET1 eusapia:")))
j2= array(eval(input("VET2 BARSANULFO:"))) 
i = 0
soma1 = 0
soma2 = 0
while (i< size(j1)):
	if (j1[i]== 11 and j2[i]==33) or (j1[i]==22 and j2[i]==11) or (j1[i]==33 and j2[i]==22):
		soma1 = soma1 +1
	elif (j1[i]==33 and j2[i]==11) or (j1[i]==11 and j2[i]==22) or (j1[i]==22 and j2[i]==33):
		soma2 = soma2 +1
	else:
		mgs = "EMPATE"
i = i+1
print(size(j1))
if (soma1>soma2):
	print("EUSAPIA")
elif (soma2>soma1):
	print("BARSANULFO")
else:
	print("EMPATE")
-- EXECUTION TIME:
894.536
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 19:11:44) 
-- CODE:
from numpy import*
j1 = array(eval(input("VET1 EUSAAPIA: ")))
j2= array(eval(input("VET2 BARSANULFO: "))) 
i = 0
soma1 = 0
soma2 = 0
while (i< size(j1)):
	if (j1[i]== 11 and j2[i]==33) or (j1[i]==22 and j2[i]==11) or (j1[i]==33 and j2[i]==22):
		soma1 = soma1 +1
	elif (j1[i]==33 and j2[i]==11) or (j1[i]==11 and j2[i]==22) or (j1[i]==22 and j2[i]==33):
		soma2 = soma2 +1
	i = i+1
print(size(j1))
if (soma1>soma2):
	print("EUSAPIA")
elif (soma2>soma1):
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-26 19:12:04) 
-- CODE:
from numpy import*
j1 = array(eval(input("VET1 EUSAAPIA: ")))
j2= array(eval(input("VET2 BARSANULFO: "))) 
i = 0
soma1 = 0
soma2 = 0
while (i< size(j1)):
	if (j1[i]== 11 and j2[i]==33) or (j1[i]==22 and j2[i]==11) or (j1[i]==33 and j2[i]==22):
		soma1 = soma1 +1
	elif (j1[i]==33 and j2[i]==11) or (j1[i]==11 and j2[i]==22) or (j1[i]==22 and j2[i]==33):
		soma2 = soma2 +1
	i = i+1
print(size(j1))
if (soma1>soma2):
	print("EUSAPIA")
elif (soma2>soma1):
	print("BARSANULFO")
else:
	print("EMPATE")
-- EXECUTION TIME:
0.545146
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
